--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100px;
+  height: 100vh;
   margin: 0;
   background-color: #f8fbff;
   font-family: "Montserrat", sans-serif;
@@ -31,11 +31,11 @@ body {
 
 form {
   background-color: #fff;
-  border: 1px solid #ccc;
+  border: 0px solid #ccc;
   border-radius: 5px;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 300px;
+  width: 800px;
 }
 
 /* Style form labels */
@@ -70,7 +70,7 @@ button:hover {
 
 /* Style form inputs */
 input[type="number"] {
-  width: 100%;
+  width: 80%;
   padding: 5px;
   border: 1px solid #ccc;
   border-radius: 3px;
