--- a/assets/style.css
+++ b/assets/style.css
@@ -22,15 +22,15 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: #f8fbff;
+  background-color: rgb(25, 26, 27);
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  color: #808080;
+  color: rgb(160, 151, 139);
 }
 
 form {
-  background-color: #fff;
-  border: 0px solid #ccc;
+  background-color: rgb(19, 21, 22);
+  border: 0px solid rgb(160, 151, 139);
   border-radius: 5px;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -59,15 +59,15 @@ label {
 input[type="number"] {
   width: 100%;
   padding: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid #342f2f;
   border-radius: 3px;
   margin-bottom: 10px;
 }
 
 /* Style the submit button */
 button {
-  background-color: #f5853f;
-  color: #fff;
+  background-color: rgb(164, 68, 9);
+  color: rgb(232, 239, 227);
   padding: 10px 20px;
   border: none;
   border-radius: 3px;
@@ -81,17 +81,6 @@ button {
   width: 0;
   height: 0;
   overflow: hidden;
-}
-
-.bat {
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  background-color: black;
-  border-radius: 50%;
-  transform: scale(0.2);
-  opacity: 0;
-  animation: batFly 2s ease-out forwards;
 }
 
 @keyframes batFly {
@@ -109,7 +98,7 @@ button {
 input[type="number"] {
   width: 80%;
   padding: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid rgb(62, 68, 70);
   border-radius: 3px;
   margin-bottom: 10px;
   transition: box-shadow 0.3s; /* Add a transition for the shadow effect */
@@ -128,14 +117,15 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
+/* Style form inputs */
 input[type="number"] {
   width: 100%;
   padding: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid rgb(105, 97, 86);
   border-radius: 3px;
   margin-bottom: 10px;
-  transition: background-color 0.3s; /* Add a transition for the background color */
-  outline: none;
-  /* Define the background color when not focused */
-  background-color: #fff;
+  background-color: rgb(20, 22, 23); /* Update the background color here */
+  transition: box-shadow 0.3s;
 }
+
+/* ... rest of your CSS ... */
