--- a/views/getCSV.ejs
+++ b/views/getCSV.ejs
@@ -7,7 +7,7 @@
     <title>getCSVFile</title>
 </head>
 <body>
-    <form method="post" enctype="multipart/form-data">
+    <form action="/upload_csv" method="post" enctype="multipart/form-data">
         <div>
           <label for="csv_file">Choose file to upload</label>
           <input
