--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,6 @@ header {
 h1 {
   position: absolute;
   top: 0;
-  left: 0;
   font-size: 36px;
   margin: 10px;
   padding: 0;
@@ -98,15 +97,10 @@ button {
 input[type="number"] {
   width: 80%;
   padding: 5px;
-  border: 1px solid rgb(62, 68, 70);
+  border: 1px solid rgb(255, 255, 255);
   border-radius: 3px;
   margin-bottom: 10px;
   transition: box-shadow 0.3s; /* Add a transition for the shadow effect */
-
-  /* Define shadow styles when hovering */
-  &:hover {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); /* Add a shadow effect on hover */
-  }
 }
 
 /* Hide up and down arrows for input[type="number"] */
@@ -124,8 +118,7 @@ input[type="number"] {
   border: 1px solid rgb(105, 97, 86);
   border-radius: 3px;
   margin-bottom: 10px;
-  background-color: rgb(20, 22, 23); /* Update the background color here */
+  background-color: rgb(24, 26, 27); /* Update the background color here */
+  color: #fff;
   transition: box-shadow 0.3s;
 }
-
-/* ... rest of your CSS ... */
