--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MortgageMate</title>
     <h1>MortgageMate</h1>
     <link rel="stylesheet" type="text/css" href="style.css">
