--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,12 @@ body {
   padding: 0;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  background-color: rgb(25, 26, 27);
+  background: rgb(238, 174, 202);
+  background: radial-gradient(
+    circle,
+    rgba(238, 174, 202, 1) 0%,
+    rgba(148, 187, 233, 1) 100%
+  );
   color: rgb(160, 151, 139);
 }
 
@@ -21,7 +26,7 @@ h1 {
   margin: 0;
   text-align: center;
   padding: 10px;
-  color: rgb(160, 151, 139);
+  color: rgb(255, 255, 255);
 }
 
 /* Center the form */
@@ -30,7 +35,7 @@ form {
   flex-direction: column;
   align-items: left;
   justify-content: center;
-  background-color: rgb(19, 21, 22);
+  background-color: #df744a;
   border: 1px solid rgb(160, 151, 139);
   border-radius: 5px;
   padding: 20px;
@@ -43,7 +48,7 @@ form {
 /* Style form labels */
 label {
   font-weight: bold;
-  color: rgb(160, 151, 139); /* Label text color */
+  color: rgb(255, 255, 255); /* Label text color */
 }
 
 /* Style form inputs */
@@ -51,7 +56,7 @@ input[type="number"] {
   width: 100%;
   padding: 5px;
   border: 1px solid #342f2f;
-  background-color: rgb(30, 33, 34);
+  background-color: #df744a;
   border-radius: 3px;
   margin-bottom: 10px;
   color: rgb(0, 0, 0);
@@ -59,7 +64,7 @@ input[type="number"] {
 
 /* Style the submit button */
 button {
-  background-color: rgb(164, 68, 9); /* Button background color */
+  background-color: #f1cdb0; /* Button background color */
   color: rgb(232, 239, 227); /* Button text color */
   padding: 10px 20px;
   border: none;
