--- a/assets/style.css
+++ b/assets/style.css
@@ -42,7 +42,8 @@ form {
 /* Style form labels */
 label {
   font-weight: bold;
-  color: rgb(255, 255, 255); /* Label text color */
+  color: rgb(255, 255, 255);
+  margin-bottom: 10px;
 }
 
 /* Style form inputs */
@@ -53,7 +54,7 @@ input[type="number"] {
   background-color: rgb(24, 26, 27);
   border-radius: 3px;
   margin-bottom: 10px;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 /* Style the submit button */
@@ -64,6 +65,9 @@ button {
   border: none;
   border-radius: 3px;
   cursor: pointer;
+  width: 20%;
+  margin: 0 auto;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* Apply consistent styles for input[type="number"] */
