IM FALLING ASLEEP, added css files for htmls but havent completed them

--- a/views/getCSV.html
+++ b/views/getCSV.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>getCSVFile</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="getCVS.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
+  <title>getCSVFile</title>
 </head>
+
 <body>
-    <form method="post" enctype="multipart/form-data">
-        <div>
-          <label for="csv_file">Choose file to upload</label>
-          <input
-            type="file"
-            id="csv_file"
-            name="csv_file"
-            accept=".csv" />
-        </div>
-        <div>
-          <button>Submit</button>
-        </div>
-      </form>
+  <form method="post" enctype="multipart/form-data">
+    <div>
+      <label for="csv_file">Choose file to upload</label>
+      <input type="file" id="csv_file" name="csv_file" accept=".csv" />
+    </div>
+    <div>
+      <button>Submit</button>
+    </div>
+  </form>
 </body>
+
 </html>
